<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="3dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ElementId"
            android:text="@string/element_de_module"
            android:textSize="22sp"
            android:textColor="#000"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/DebutSeance"
            android:textSize="18sp"
            android:textColor="#a9a9a9"
            android:layout_below="@+id/ElementId"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/debut_du_seance"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/FinSeance"
            android:textSize="18sp"
            android:textColor="#a9a9a9"
            android:layout_below="@id/ElementId"
            android:layout_toRightOf="@+id/DebutSeance"
            android:layout_toEndOf="@id/DebutSeance"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/fin_du_seance"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/TypeSeance"
            android:textSize="18sp"
            android:textColor="#a9a9a9"
            android:layout_toRightOf="@+id/ElementId"
            android:layout_toEndOf="@+id/ElementId"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/fin_du_seance"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/SalleSeance"
            android:textSize="18sp"
            android:textColor="#a9a9a9"
            android:layout_below="@+id/DebutSeance"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/salle_du_seance"
            />
    </RelativeLayout>

</androidx.cardview.widget.CardView>